fix: shooter has bloques not plataformas

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     },
                     'Nivel': {
                         'Diseño': {
-                            'Nivel con plataformas visibles y colisionables': 0.75
+                            'Nivel con bloques visibles y colisionables': 0.75
                         }
                     },
                     'Interfaz': {
