--- a/index.html
+++ b/index.html
@@ -22,54 +22,115 @@
 			src="https://cdn.jsdelivr.net/npm/toastify-js"
 		></script>
 		<script defer src="//unpkg.com/alpinejs"></script>
+		<script src="https://unpkg.com/feather-icons"></script>
 
-        <script src="hardcoded_rubrics.js"></script>
+		<script src="hardcoded_rubrics.js"></script>
 	</head>
 	<body>
-        <main x-data="{
+		<main
+			x-data="{
             revisadoPor: $persist(''),
-            customRubrics: $persist([{'id': 'test', 'name': 'test', 'rubric': {}}]), //todo: persist
-            hardcodedRubrics: [platformerRubric, shooterRubric, arcadeRubric],
-            getAvailableRubrics: function() {
-                return {
-                    ...Object.fromEntries(this.customRubrics.map(rubric => [rubric.id, rubric])),
-                    ...Object.fromEntries(this.hardcodedRubrics.map(rubric => [rubric.id, rubric]))
-                };
-            },
-            selectedRubric: $persist('0'),
+            rubrics: $persist({
+                'example-0': platformerRubric,
+                'example-1': shooterRubric,
+                'example-2': arcadeRubric
+            }),
+            selectedRubric: $persist('example-0'),
+            editingName: false,
             createNewRubric: function() {
                 let newName = 'rubric-0';
                 let i = 0;
-                while (newName in this.customRubrics) {
+                const nameSet = new Set(Object.values(this.rubrics).map(rubric => rubric.name));
+                while (newName in nameSet) {
                     newName = `rubric-${i}`;
                 } 
 
+                const newId = `custom-${Date.now()}`;
                 const newRubric = {
-                    'id': `custom-${Date.now()}`,
+                    'id': newId,
                     'name': newName,
                     'rubric': {}
                 }
 
-                this.customRubrics.push(newRubric);
+                this.rubrics[newId] = newRubric;
                 this.selectedRubric = newRubric.id;
+            },
+            deleteRubric: function() {
+                delete this.rubrics[this.selectedRubric];
+                this.selectedRubric = Object.keys(this.rubrics)[0];
             }
-        }">
-            <select x-model="selectedRubric">
-                <template x-for="[id, rubric] of Object.entries(getAvailableRubrics())">
-                    <option x-bind:value="id" x-text="rubric.name" :selected="selectedRubric===id"></option>
-                </template>
-            </select>
+        }"
+		>
+			<label for="revisadoPor"
+				>Revisado por:
+				<input
+					id="revisadoPor"
+					type="text"
+					x-model="revisadoPor"
+					placeholder="Nombre"
+			/></label>
 
-            <!-- Create new rubric -->
-            <button @click="createNewRubric()">Crear nueva rúbrica</button>
+			<div class="flex-space">
+				<div class="flex-center gap-half">
+					<select x-model="selectedRubric"
+                        @change="editingName=false"
+                    >
+						<template x-for="[id, rubric] of Object.entries(rubrics)">
+							<option
+								x-bind:value="id"
+								x-text="rubric.name"
+								:selected="selectedRubric===id"
+							></option>
+						</template>
+					</select>
 
-            <div x-text="JSON.stringify(getAvailableRubrics())"></div>
+					<button @click="createNewRubric()">
+						<i data-feather="plus-circle"></i>
+					</button>
+					<button @click="deleteRubric()" class="danger">
+						<i data-feather="trash-2"></i>
+					</button>
+					<button
+						@click="editingName=true"
+						class="info"
+						x-show="!editingName"
+						x-transition
+					>
+						<i data-feather="type"></i>
+					</button>
+				</div>
 
-            <!-- Grade with selected rubric -->
-            <!-- Copy grading results -->
-        </main>
-        <footer>
-            Página por: <a href="github.com/Nyveon">Eric K.</a>
-        </footer>
-    </body>
+                <div class="flex-center gap-half">
+                    <button
+                        @click="editingName=false"
+                        class="info"
+                        x-cloak
+                        x-show="editingName"
+                        x-transition
+                        x-transition:leave.duration.0ms
+                    >
+                        <i data-feather="x"></i>
+                    </button>
+                    <input
+                        id="nombreRubrica"
+                        type="text"
+                        x-model="rubrics[selectedRubric].name"
+                        placeholder="Nombre"
+                        x-cloak
+                        x-show="editingName"
+                        x-transition
+                        x-transition:leave.duration.0ms
+                    />
+                </div>
+			</div>
+
+			<!-- Grade with selected rubric -->
+			<!-- Copy grading results -->
+		</main>
+		<footer>Página por: <a href="github.com/Nyveon">Eric K.</a></footer>
+
+		<script>
+			feather.replace();
+		</script>
+	</body>
 </html>
