--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		/>
 		<link rel="stylesheet" href="./index.css" />
 
+		<script src="hardcoded_rubrics.js"></script>
 		<script
 			defer
 			src="https://cdn.jsdelivr.net/npm/@alpinejs/persist@3.x.x/dist/cdn.min.js"
@@ -23,8 +24,6 @@
 		></script>
 		<script defer src="//unpkg.com/alpinejs"></script>
 		<script src="https://unpkg.com/feather-icons"></script>
-
-		<script src="hardcoded_rubrics.js"></script>
 	</head>
 	<body>
 		<main
@@ -104,7 +103,7 @@
 						<i data-feather="trash-2"></i>
 					</button>
 					<button
-						@click="editing=true"
+						@click="editing=true;"
 						class="info"
 						x-show="!editing"
 						x-transition
@@ -147,20 +146,21 @@
 				<ul>
 					<template
 						x-for="category in rubrics[selectedRubric]['rubric']"
+						x-init="$nextTick(() => { feather.replace(); })"
 					>
 						<li>
 							<u x-text="category.name" x-show="!editing"></u>
-                            <div class="inline-edit" x-show="editing">
-                                <input type="text" x-model="category.name" />
-                            </div>
+							<div class="inline-edit" x-show="editing" x-cloak>
+								<input type="text" x-model="category.name" />
+							</div>
 
 							<ul>
 								<template x-for="subcategory in category.subcategories">
 									<li>
 										<span x-text="subcategory.name" x-show="!editing"></span>
-                                        <div class="inline-edit" x-show="editing">
-                                            <input type="text" x-model="subcategory.name" />
-                                        </div>
+										<div class="inline-edit" x-show="editing" x-cloak>
+											<input type="text" x-model="subcategory.name" />
+										</div>
 
 										<ul>
 											<template x-for="(item, index) in subcategory.criteria">
@@ -181,18 +181,52 @@
 														<span x-text="item.name"></span>
 													</label>
 
-                                                    <div class="inline-edit" x-show="editing">
-                                                        <input type="number" x-model="item.value" min="0" step="0.05"/>
-                                                        <input type="text" x-model="item.name" />
-                                                        <select x-model="item.type">
-                                                            <option value="0">Requisito</option>
-                                                            <option value="1">Descuento</option>
-                                                            <option value="2">Bonus</option>
-                                                        </select>
+													<div class="inline-edit" x-show="editing" x-cloak>
+														<input
+															type="number"
+															x-model="item.value"
+															min="0"
+															step="0.05"
+														/>
+														<input type="text" x-model="item.name" />
+														<select x-model="item.type">
+															<option value=0>Requisito</option>
+															<option value=1>Descuento</option>
+															<option value=2>Bonus</option>
+														</select>
 													</div>
 												</li>
 											</template>
 										</ul>
+										<div
+											class="inline-edit new-edit"
+											x-show="editing"
+											x-cloak
+											x-data="{
+                                            item: {
+                                                value: 0,
+                                                name: 'Nuevo Criterio',
+                                                type: 0
+                                            }
+                                        }"
+										>
+											<button class="small-button" @click="subcategory.criteria.push(item)">
+												<i data-feather="plus-circle"></i>
+											</button>
+
+											<input
+												type="number"
+												x-model="item.value"
+												min="0"
+												step="0.05"
+											/>
+											<input type="text" x-model="item.name" />
+											<select x-model="item.type">
+												<option value=0>Requisito</option>
+												<option value=1>Descuento</option>
+												<option value=2>Bonus</option>
+											</select>
+										</div>
 									</li>
 								</template>
 							</ul>
@@ -206,7 +240,7 @@
 		</main>
 		<footer>Página por: <a href="github.com/Nyveon">Eric K.</a></footer>
 
-		<script>
+		<script defer>
 			feather.replace();
 		</script>
 	</body>
