--- a/index.html
+++ b/index.html
@@ -203,25 +203,25 @@
 											x-show="editing"
 											x-cloak
 											x-data="{
-                                            item: {
-                                                value: 0,
-                                                name: 'Nuevo Criterio',
-                                                type: 0
-                                            }
-                                        }"
+                                                newItem: { ...itemTemplate },
+                                                submit: function() {
+                                                    subcategory.criteria.push(this.newItem)
+                                                    this.newItem = { ...itemTemplate }
+                                                }
+                                            }"
 										>
-											<button class="small-button" @click="subcategory.criteria.push(item)">
+											<button class="small-button" @click="submit()">
 												<i data-feather="plus-circle"></i>
 											</button>
 
 											<input
 												type="number"
-												x-model="item.value"
+												x-model="newItem.value"
 												min="0"
 												step="0.05"
 											/>
-											<input type="text" x-model="item.name" />
-											<select x-model="item.type">
+											<input type="text" x-model="newItem.name" />
+											<select x-model="newItem.type">
 												<option value=0>Requisito</option>
 												<option value=1>Descuento</option>
 												<option value=2>Bonus</option>
