feat: item checking

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 															:id="itemid"
 															:name="itemid"
 															type="checkbox"
-															x-model="checkedItems[itemid]"
+															x-model="item.checked"
 														/>
 														<code
 															x-text="formatTypeAndValue(item.type, item.value)"
